# vitrail

./: .env.example  .gitignore  ARBORESCENCE.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STATE.md  TODO.md  index.html  package.json  restart.sh  start.sh  stop.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_flows_detail.sql  0003_keylog_apps.sql  0004_flows_five_tuple_index.sql  0005_decryption.sql  0006_destination_tags.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/attribution/: cache.rs  daemon_config.rs  desktop_resolver.rs  mod.rs  pb.rs  server.rs  subsystem.rs  tests.rs
src-tauri/src/capture/: events.rs  mod.rs  subsystem.rs
src-tauri/src/commands/: alerts.rs  dashboard.rs  destinations.rs  flows.rs  killswitch.rs  mock_data.rs  mock_flows.rs  mod.rs  processes.rs  search.rs  settings.rs  types.rs
src-tauri/src/correlation/: builder.rs  channel.rs  engine.rs  engine_tests.rs  mod.rs  update.rs  visibility.rs
src-tauri/src/decryption/: abnormal_exit_guard.rs  ca.rs  exclusions.rs  helper_backend.rs  mod.rs  output.rs  polarproxy_process.rs  subsystem.rs  subsystem_tests.rs
src-tauri/src/keylog/: app_injection.rs  detection.rs  keyfile.rs  mod.rs  parser.rs  subsystem.rs  tshark_process.rs
src-tauri/src/killswitch/: emergency.rs  mod.rs  nftables.rs  sequence.rs  snapshot.rs  subsystem.rs  tests.rs  verify.rs
src-tauri/src/shared/: mod.rs
src-tauri/src/storage/: aggregates.rs  attribution.rs  connection.rs  decryption.rs  destinations.rs  error.rs  events.rs  flows.rs  keylog.rs  migrations.rs  mod.rs  retention.rs  (+2 more)
vitrail-capture-helper/: Cargo.toml
vitrail-capture-helper/src/: capture_thread.rs  main.rs  output.rs  packet.rs  rate_limiter.rs  tls_sni.rs
(+104 files in other folders)
