[package]
name = "vitrail-capture-helper"
version = "0.1.0"
description = "Binaire privilégié minimal (cap_net_raw,cap_net_admin) — capture AF_PACKET passive uniquement (EPIC 2)."
edition = "2021"

[[bin]]
name = "vitrail-capture-helper"
path = "src/main.rs"

[dependencies]
pnet = "0.35"
tls-parser = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
